# nerf2d

./: .gitignore  README.md  pyproject.toml  requirements.txt
nerf2d/: __init__.py  __main__.py  create_dataset.py  image_io.py  scene_extraction.py  svg.py
nerf2d/drawing/: cameras.py  scene.py
nerf2d/geometry/: random_extrinsics.py  ray_tracing.py
nerf2d/visualization/: layout.py
