[project]
name = "nerf2d"
version = "0.0.1"
description = "2D NeRF toy dataset generation."
readme = "README.md"
requires-python =">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "David Charatan", email = "charatan@mit.edu"},
]
keywords = ["nerf"]
urls = {repository = "https://github.com/dcharatan/nerf2d" }
dependencies = [
  "einops",
  "jaxtyping",
  "numpy",
  "scipy",
  "torch",
  "torchvision",
  "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["nerf2d/*"]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I"]
ignore = ["F722"] # Ignore F722 for jaxtyping compatibility.

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.12.
target-version = "py312"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
